<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_alliance"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_alliance" />
        <item
            android:id="@+id/nav_guild"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_guild" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>
</menu>