<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 Sierra
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction,
  ~ including without limitation the rights to use, copy, modify, merge, publish, distribute,
  ~ sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or
  ~ substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
  ~ NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~ NON-INFRINGEMENT. IN NO EVENT SHALL THE X CONSORTIUM BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
  ~ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  ~ Except as contained in this notice, the name of Sierra shall not be used in advertising or
  ~ otherwise to promote the sale, use or other dealings in this Software without prior written
  ~ authorization from Sierra.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.clubbpc.esoquest.ui.main.MainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_nav_main_to_nav_line"
            app:destination="@id/nav_line" />
    </fragment>

    <fragment
        android:id="@+id/nav_alliance"
        android:name="com.clubbpc.esoquest.ui.alliance.AllianceFragment"
        android:label="@string/menu_alliance"
        tools:layout="@layout/fragment_alliance" />

    <fragment
        android:id="@+id/nav_guild"
        android:name="com.clubbpc.esoquest.ui.guild.GuildFragment"
        android:label="@string/menu_guild"
        tools:layout="@layout/fragment_guild" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.clubbpc.esoquest.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_line"
        android:name="com.clubbpc.esoquest.ui.main.MainLineFragment"
        tools:layout="@layout/fragment_line"/>
</navigation>