<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 Sierra
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction,
  ~ including without limitation the rights to use, copy, modify, merge, publish, distribute,
  ~ sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or
  ~ substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
  ~ NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~ NON-INFRINGEMENT. IN NO EVENT SHALL THE X CONSORTIUM BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
  ~ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  ~ Except as contained in this notice, the name of Sierra shall not be used in advertising or
  ~ otherwise to promote the sale, use or other dealings in this Software without prior written
  ~ authorization from Sierra.
  -->

<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl_line_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_view_line_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_child_margin"
        android:text="@string/lorem_ipsum_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/iv_view_line_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_child_padding"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/lorem_ipsum_content_description"
        android:layout_below="@id/tv_view_line_title"/>

    <TextView
        android:id="@+id/tv_view_line_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/view_child_padding"
        android:paddingEnd="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="@dimen/view_child_padding"
        android:layout_marginStart="@dimen/view_child_margin"
        android:layout_marginEnd="0dp"
        android:text="@string/lorem_ipsum_description"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_below="@id/iv_view_line_image"/>
</RelativeLayout>