<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 Sierra
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction,
  ~ including without limitation the rights to use, copy, modify, merge, publish, distribute,
  ~ sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or
  ~ substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
  ~ NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~ NON-INFRINGEMENT. IN NO EVENT SHALL THE X CONSORTIUM BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
  ~ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  ~ Except as contained in this notice, the name of Sierra shall not be used in advertising or
  ~ otherwise to promote the sale, use or other dealings in this Software without prior written
  ~ authorization from Sierra.
  -->

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/view_child_margin"
        tools:context=".ui.main.LineFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/iv_fragment_line_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/lorem_ipsum_content_description"/>

    <TextView
        android:id="@+id/tv_fragment_line_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum_description"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_below="@id/iv_fragment_line_image"/>

    <ImageView
        android:id="@+id/iv_fragment_line_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_eso_ouroboros_100dp"
        android:contentDescription="@string/view_generic_content_description"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/view_child_padding"
        android:layout_below="@id/tv_fragment_line_summary"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_line"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_below="@id/iv_fragment_line_divider"
        app:layoutManager="LinearLayoutManager" />
</RelativeLayout>
</androidx.core.widget.NestedScrollView>