<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023 Sierra
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction,
  ~ including without limitation the rights to use, copy, modify, merge, publish, distribute,
  ~ sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or
  ~ substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
  ~ NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~ NON-INFRINGEMENT. IN NO EVENT SHALL THE X CONSORTIUM BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
  ~ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  ~ Except as contained in this notice, the name of Sierra shall not be used in advertising or
  ~ otherwise to promote the sale, use or other dealings in this Software without prior written
  ~ authorization from Sierra.
  -->

<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.utility.SummaryView">

    <RelativeLayout
        android:id="@+id/llc_view_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_child_margin"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_view_summary_summary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:id="@+id/tv_view_summary_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_child_margin"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/iv_view_summary_show_icon"
            android:text="@string/view_summary_title"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_view_summary_show_icon"
            android:layout_width="@dimen/view_summary_show_icon_width"
            android:layout_height="@dimen/view_summary_show_icon_width"
            android:layout_margin="@dimen/view_child_margin"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/view_generic_content_description"
            android:src="@drawable/ic_plus_48dp"
            app:tint="?attr/colorOnPrimary"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_view_summary_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_child_margin"
        android:text="@string/lorem_ipsum_summary"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/llc_view_summary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintLongText" />
</merge>